# ChariteTaviOutcomePrediction

./: .gitignore  activate.sh  pyproject.toml  readme.md  requirements.txt
src/tavidifficulty/: utils.py
src/tavidifficulty/data/: data_loading.py  datasets.py  excel_extraction_utils.py  parse_gender_file.py  parse_metadata.py  parse_nifties.py  parse_results_files.py  parse_targets.py  patient.py
src/tavidifficulty/exploration/: check_overlap_all_dataframes.py  check_overlap_issacs_data.py  column_aera_diameter_exploration.py  column_crosssection_area_exploration.py  dataset_distribution_exploration.py  distance_from_valve_exploration.py  euroscore_exploration.py  exploration_utils.py  final_preprocessing_exploration.py  gender_exploration.py  metadata_exploration.py  metadata_exploration_for_thesis_writing.py  min_diameter_exploration.py  new_targets_exploration.py  outlier_analysis.py  preprocessing_exploration.py  results_folder_exploration.py  sex_exploration.py  unfinished_segmentations_detection.py
src/tavidifficulty/models/: extended_data_logistic_regression.py  metaData_logistic_regression.py
src/tavidifficulty/models/OneD_CNN/: Cluster_OneDD_CNN_train.py  HYPERPARAMETERSEARCH_Cluster_OneDD_CNN_train.py  OneDD_CNN_train.py  OneDD_CNN_visualize.py  OneD_CNN_config.py  OneD_CNN_model.py  OneD_CNN_training_utils.py  training_logs_cleanup.py
src/tavidifficulty/preprocessing/: preprocess_metadata.py  preprocessing_config.py  preprocessing_extended_data.py  preprocessing_utils.py
src/tavidifficulty/visualization/: visualization_utils.py
(+14 files in other folders)
